Change muscularity in api
