# server/docs/swagger.json
@@ -833,12 +833,6 @@
                     "maximum": 9,
                     "minimum": -9
                 },
-                "deception": {
-                    "description": "Обмускульность (9 баллов)",
-                    "type": "number",
-                    "maximum": 9,
-                    "minimum": -9
-                },
                 "downSides": {
                     "$ref": "#/definitions/models.DownSides"
                 },
@@ -916,6 +910,12 @@
                     "type": "number",
                     "maximum": 100,
                     "minimum": -100
+                },
+                "muscularity": {
+                    "description": "Обмускульность (9 баллов)",
+                    "type": "number",
+                    "maximum": 9,
+                    "minimum": -9
                 },
                 "rating": {
                     "description": "Суммарный рейтинг (100 баллов)",
@@ -1194,7 +1194,7 @@
                     "description": "Т Ширина груди",
                     "type": "number"
                 },
-                "bodyDeception": {
+                "bodyMuscularity": {
                     "description": "Т Обмускульность",
                     "type": "number"
                 },
@@ -1222,10 +1222,6 @@
                     "description": "В Прикрепление передних долей вымени",
                     "type": "number"
                 },
-                "limbsDeception": {
-                    "description": "К Обмускульность",
-                    "type": "number"
-                },
                 "limbsForelegWalk": {
                     "description": "К Поступь передних ног",
                     "type": "number"
@@ -1244,6 +1240,10 @@
                 },
                 "limbsHoofAngle": {
                     "description": "К Угол копыта",
+                    "type": "number"
+                },
+                "limbsMuscularity": {
+                    "description": "К Обмускульность",
                     "type": "number"
                 },
                 "milkTypeBackBoneQuality": {
