# server/models/exterior.go
@@ -79,12 +79,12 @@ type Exterior struct {
 	BackUdderSegmentsWidth          float64 `validate:"lte=9,gte=-9"` // Ширина задних долей вымени (9 баллов)
 	CentralLigamentDepth            float64 `validate:"lte=9,gte=-9"` // Глубина центральной связки (9 баллов)
 
-	BackBoneQuality     float64 `validate:"lte=9,gte=-9"`                  // Качество костяка (9 баллов)
-	Muscularity         float64 `validate:"lte=9,gte=-9" json:"deception"` // Обмускульность (9 баллов)
-	SacrumLength        float64 `validate:"lte=9,gte=-9"`                  // Длина крестца (9 баллов)
-	TopLine             float64 `validate:"lte=9,gte=-9"`                  // Линия верха (9 баллов)
-	UdderBalance        float64 `validate:"lte=9,gte=-9"`                  // Баланс вымени (9 баллов)
-	FrontNippleDiameter float64 `validate:"lte=9,gte=-9"`                  // Диаметр передних сосков (9 балов)
-	BackNippleDiameter  float64 `validate:"lte=9,gte=-9"`                  // Диаметр задних сосков (9 баллов)
-	UdderVeins          float64 `validate:"lte=9,gte=-9"`                  // Выраженность вен вымени (9 баллов)
+	BackBoneQuality     float64 `validate:"lte=9,gte=-9"` // Качество костяка (9 баллов)
+	Muscularity         float64 `validate:"lte=9,gte=-9"` // Обмускульность (9 баллов)
+	SacrumLength        float64 `validate:"lte=9,gte=-9"` // Длина крестца (9 баллов)
+	TopLine             float64 `validate:"lte=9,gte=-9"` // Линия верха (9 баллов)
+	UdderBalance        float64 `validate:"lte=9,gte=-9"` // Баланс вымени (9 баллов)
+	FrontNippleDiameter float64 `validate:"lte=9,gte=-9"` // Диаметр передних сосков (9 балов)
+	BackNippleDiameter  float64 `validate:"lte=9,gte=-9"` // Диаметр задних сосков (9 баллов)
+	UdderVeins          float64 `validate:"lte=9,gte=-9"` // Выраженность вен вымени (9 баллов)
 }
